        the two-sided RE test when set to FALSE (default is TRUE which gives the
        one-sided RE test as before).
  * plm.data:
      * deprecated now (gives warning), use pdata.frame instead.
      * function internally uses pdata.frame now and then adjusts
        to get a "plm.dim" object as before. This way, plm.data
        benefits from bug fixes made previously in pdata.frame.


Changes since version 1.6-5
  
  * pFtest: disable input model check due to reverse dependency of package AER
    (and to allow arbitrary model comparisons); check was erroneously enabled in
    plm version 1.6-4.


Changes since version 1.6-4

  * Argument for supplying a variance-covariance matrix is now consistently named 'vcov'
    across all functions. The old argument '.vcov' of summary.plm is marked as deprecated.
    Deprecation warnings are only issued for those functions which where on CRAN with
    the now deprecated argument '.vcov' (i.e., just for summary.plm, no warnings for
    functions pwaldtest, fixef, within_intercept).
  * Snesp.Rd, LaborSupply.Rd: broken links fixed.
  * Vignette: updated contact details.
  

Changes since version 1.6-3

  * Function Ftest renamed to pwaldtest (there was never a CRAN release with Ftest
    exported, thus no deprecation warning).
  * summary.plm: F statistic uses adjusted df2 parameter in case of robust vcov.


Changes since version 1.6-2

  * pcdtest optimized for speed. 'preshape()' added to pcdtest.R to take care of reshaping in wide form
    prior to applying 'cor()'.


Changes since version 1.6-1

  * vcovG and vcovBK: added compliance with instrumental variables models (through two-parts formulae).
  * plm.Rd: added note on the intercept in 'fd' models, and how to eliminate it.
  * make.pbalanced: gained argument 'balance.type' which allows to select whether
    to balance by filling in NA values ("fill", like before) or (now new) also by
    keeping only time periods shared among all individuals ("shared").