@@ -15,6 +15,10 @@ TODO: comment about improvement of twoway FE transformation (Yves)
       * function internally uses pdata.frame now and then adjusts
         to get a "plm.dim" object as before. This way, plm.data
         benefits from bug fixes made previously in pdata.frame.
+  * (internal, not exported): residuals_overall_exp.plm and fitted_exp.plm are added
+    for testing purposes: residuals_overall_exp.plm always gives the residuals of the
+    overall/outer plm model, fitted_exp.plm gives the fitted values (by subtracting
+    the overall residuals from the untransformed response variable).
 
 
 Changes since version 1.6-5
